Fix splash image wrapping

--- a/src/styles/layout-override.css
+++ b/src/styles/layout-override.css
@@ -5,8 +5,8 @@ a {
 
 @media only screen and (min-width: 820px){
   #splashImage {
-      background-image: url(/aerial-view-cappadocia-1.jpg);
-      height: 45vh;
+      background-image: url(/aerial-view-cappadocia-2.jpg);
+      height: 50vh;
   }
   #blog-post-list {
       max-width: 50vw;
